# C.O.Project-for-Fall-2024

./: CMakeLists.txt  README
Lab0/: lab0.c
Lab1/: assembler.c  useful_functions.c
Lab2/: lc3bsim2.c
Lab3/: generate_ucode.sh  lc3bsim3.c
Lab4/: lc3bsim4.c
Lab5/: lc3bsim5.c
Lab6/: lc3bsim6.c
scripts/: coproject
